# generative_ai_with_langchain

./: .gitignore  pyproject.toml  secret.sh
chapter_2/: 1_llm_interaction_pattern.py  2_chat_model.py  3_model_behavior.py  4_LCEL.py  control_model_behavior.txt  llm_comparison.txt
chapter_3/: 10_checkpoint.py  1_direct_graph.py  2_conditional_graph.py  3_structured_output.py  4_error_handler.py  5_retry_error_output_parser.py  6_prompt_engineering.py  7_chain_of_thought.py  8_reduce_context.py  9_memory.py
chapter_5/: 1_dummy_tools.py  2_langchain_tools.py  3_dummy_react.py  4_built_in_tools.py  5_controllable_tools.py  6_tool_nodes.py  7_demo_plan_n_solve.py  7_plan_and_solve_agent.py  agent_output.txt
